[package]
name = "img_enc"
version = "0.1.0"
edition = "2021"
author = "Kratos40-sba"
repository = "https://github.com/Kratos40-sba/img_enc"
include = [
    "src/**/*" ,
    "Cargo.toml",
    "Lena_512_rust.bmp"
]
license = "MIT"
categories = ["cryptography, algorithms"]
description = "2 rounds encryption scheme"
keywords = ["Encryption","Symmetric-Encryption"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "img_enc"
path = "./src/lib/mod.rs"
[[bin]]
name = "test"
path = "./src/test.rs"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
[dependencies]
image = "0.24.1"
sha2 = "0.10.2"
